--- a/style/style.scss
+++ b/style/style.scss
@@ -64,10 +64,6 @@ a{
     }
 }
 
-.navbar-hide, .footer-hide{
-    display: none;
-}
-
 #dropdown_content{
     display: none;
     position: absolute;
@@ -76,33 +72,29 @@ a{
 
 #dropdown_content a {
     float: none;
-    // padding: 20% 30%;
     padding : 10% 1vmax 10%;
-    // padding-right: ;
     text-decoration: none;
     display: block;
     text-align: left;
     background-color: #201e1e;
     border-radius: 2em;
     margin: 2%;
-  }
+}
 
-  .dropdown:hover #dropdown_content {
+.dropdown:hover #dropdown_content {
     display: block;
-  }
+}
 
 .navbar #ig_icon_container img{
     width: 2vmax;
     height: auto;
-
 }
 
-.main_div{
+.main-div{
     background-color: black;
     height: 100vh;
     width: 100%;
     overflow: hidden;
-
     img{
         margin-top : -20%;
         width : 100%;
@@ -111,7 +103,7 @@ a{
 }
 
 
-.main_div_overlay{
+.main-div-overlay{
     position: absolute;
     background-color: rgba(44, 42, 42, 0.5);
     left : 0;
@@ -126,7 +118,7 @@ a{
     font-size: 2.5vmax;
 }
 
-.first_section{
+.first-section{
     background-color: black;
     height: 100vh;
     color : white;
@@ -139,7 +131,7 @@ a{
         font-size: 3vmax;
     }
 
-    .projects_section {
+    .projects-section {
         display: flex;
         width: 100%;
         height: 75%;
@@ -170,7 +162,6 @@ a{
 
         #right figure img{
             width: 60%;
-
         }
     }
 
@@ -457,3 +448,47 @@ a{
         flex-direction: row-reverse;
     }
 }
+
+@media only screen and (min-width : 768px ){
+
+    .main-div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            margin : 0;
+            height: 100%;
+            width: auto;
+        }
+    }
+    
+    .first-section{
+        padding : 5%;
+        justify-content: space-around;
+        h2{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .projects-section{
+            flex-direction: column;
+            justify-content: space-around;
+            #left, #right{
+                width: 100%;
+                figure {
+                    flex-direction: row;
+                    figcaption{
+                        font-size: 2vmin;
+                    }
+                    img{
+                        width: 70%;
+                        height: auto;
+                    }
+                }  
+            }
+        }
+
+    }
+
+   }
