--- a/style/style.scss
+++ b/style/style.scss
@@ -451,44 +451,44 @@ a{
 
 @media only screen and (min-width : 768px ){
 
-    .main-div{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img{
-            margin : 0;
-            height: 100%;
-            width: auto;
-        }
-    }
+    // .main-div{
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     img{
+    //         margin : 0;
+    //         height: 100%;
+    //         width: auto;
+    //     }
+    // }
     
-    .first-section{
-        padding : 5%;
-        justify-content: space-around;
-        h2{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    // .first-section{
+    //     padding : 5%;
+    //     justify-content: space-around;
+    //     h2{
+    //         display: flex;
+    //         justify-content: center;
+    //         align-items: center;
+    //     }
 
-        .projects-section{
-            flex-direction: column;
-            justify-content: space-around;
-            #left, #right{
-                width: 100%;
-                figure {
-                    flex-direction: row;
-                    figcaption{
-                        font-size: 2vmin;
-                    }
-                    img{
-                        width: 70%;
-                        height: auto;
-                    }
-                }  
-            }
-        }
+    //     .projects-section{
+    //         flex-direction: column;
+    //         justify-content: space-around;
+    //         #left, #right{
+    //             width: 100%;
+    //             figure {
+    //                 flex-direction: row;
+    //                 figcaption{
+    //                     font-size: 2vmin;
+    //                 }
+    //                 img{
+    //                     width: 70%;
+    //                     height: auto;
+    //                 }
+    //             }  
+    //         }
+    //     }
 
-    }
+    // }
 
    }
