--- a/style/style.scss
+++ b/style/style.scss
@@ -151,6 +151,7 @@ a{
 
                 figcaption{
                     text-align: center;
+                    font-size: 2vmin;
                 }
             }
         }
@@ -165,7 +166,7 @@ a{
         }
     }
 
-    #more_projects_btn{
+    #more-projects-btn{
         width: 20%;
         margin : 0 auto;
         text-align: center;
