--- a/style/style.scss
+++ b/style/style.scss
@@ -24,472 +24,28 @@ a{
     text-decoration: none;
 }
 
-.navbar{
-    background : linear-gradient(
-        to bottom,
-        #201e1e,
-        rgba(#202020, 0)
-      );
-    color : white;
-    width: 100%;
-    height: 10vh;
-    padding: 0 10%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: absolute;
-    z-index: 1;
-    font-family: $primary_font;
-    #name{
-        width: 50%;
-        height: 100%;
-        text-transform: uppercase;
-        display: flex;
-        align-items: center;
-        font-size: 2.5vmax;
-    }
-
-    ul{
-        display: flex;
-        flex-direction: row;
-        width: 50%;
-        justify-content: space-between;
-        align-items: center;
-        list-style-type: none;
-        font-size: 1.3vmax;
-    }
-
-    .icon{
-        display: none;
-    }
-}
-
-#dropdown_content{
-    display: none;
-    position: absolute;
-    border-radius: 2em;
-}
-
-#dropdown_content a {
-    float: none;
-    padding : 10% 1vmax 10%;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    background-color: #201e1e;
-    border-radius: 2em;
-    margin: 2%;
-}
-
-.dropdown:hover #dropdown_content {
-    display: block;
-}
-
-.navbar #ig_icon_container img{
-    width: 2vmax;
-    height: auto;
-}
-
-.main-div{
-    background-color: black;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    img{
-        margin-top : -20%;
-        width : 100%;
-    }
-    
-}
 
 
-.main-div-overlay{
-    position: absolute;
-    background-color: rgba(44, 42, 42, 0.5);
-    left : 0;
-    top : 0;
-    width: 100%;
-    height: 100vh;
-    color : white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 500;
-    font-size: 2.5vmax;
-}
-
-.first-section{
-    background-color: black;
-    height: 100vh;
-    color : white;
-    padding : 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    h2{
-        text-align: center;
-        font-size: 3vmax;
-    }
-
-    .projects-section {
-        display: flex;
-        width: 100%;
-        height: 75%;
-        #left, #right{
-            width: 50%;
-            display: flex;
-            padding : 1%;
-            figure {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-between;
-                width: 100%;
-                img{
-                    margin: auto;
-                }
-
-                figcaption{
-                    text-align: center;
-                    font-size: 2vmin;
-                }
-            }
-        }
-
-        #left figure img{
-            height: 87.5%;
-            padding-bottom: 2.5%;
-        }
-
-        #right figure img{
-            width: 60%;
-        }
-    }
-
-    #more-projects-btn{
-        width: 20%;
-        margin : 0 auto;
-        text-align: center;
-        border: 1px solid white;
-        cursor: pointer;
-        padding : 1% 0;
-        font-size: 1.5vmax;
-        border-radius: 1em;
-        box-shadow: 1px 2px 0px 1px;
-    }
-}
-
-.footer{
-    background-color: black;
-    color : white;
-    height : 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    .footer_header{
-        display: flex;
-        padding : 0 10%;
-        align-items: center;
-        justify-content: space-between;
-        #email, #name, #ig_icon{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-
-        #email{
-            font-family: $primary_font;
-            font-size: 1.3vmax;
-        }
-
-        #name{
-            font-family: $secondary_font;
-            font-size: 4vmax;
-        }
-
-        #ig_icon img{
-            width: 15%;
-        }
-
-    }
-    .footer_navbar{
-        display: flex;
-        justify-content: space-around;
-        padding : 0 20%;
-        align-items: center;
-        li{
-            list-style-type: none;
-            a{
-                font-size: 1.5vmax;
-                font-family: $primary_font;
-                letter-spacing: .2rem;
-            }
-        }
-    }
-}
-
-// About.html
-
-.about_intro, .about_full{
-    height: 100vh;
-    color : white;
-}
-
-.about_intro{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding : 15% 10%;
-
-    #content{
-        font-size: 2vmax;
-        text-align: center;
-    }
-
-    #full_bio_btn{
-        border : 1px solid white;
-        padding : 2%;
-        border-radius: 2em;
-        cursor: pointer;
-    }
-
-}
-
-.about_full{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    #content{
-        display: flex;
-        flex-direction: column;
-        color : white;
-        padding : 0 2.5%;
-        line-height: 1.5em;
-        font-size: 1.2vw;
-        justify-content: space-around;
-        height: 100%;
-    }
-    #about_pic{
-        width: 40%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img{
-            height: 80%;
-        }
-    }
-}
 
 
-.contact{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color : white;
-    padding-top: 10%;
-    padding-left: 10%;
 
-    .contact-content{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 100%;
-        width: 100%;
-        #contact-pic{
-            width: 50%;
-            height: 100%;
-            img{
-                height: 100%;
-            }
-        }
-    }
-}
 
-.contact-form{
 
-    h2{
-        font-size: 2vw;
-    }
 
-    text-align: center;
-    width: 50%;
-    #contact-form-content{
-        padding : 5%;
-        height: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
 
-        #form-item{
-            display: flex;
-            flex-direction: column;
-        }
 
-        label{
-            text-align: left;
-            margin-top: 10px;
-            
-        }
 
-        label, input, #submit-btn{
-            font-size : 1.5vw;
-        }
 
-        input, textarea, #submit-btn{
-            border-radius: 10px;
-            font-size: 1.2vw;
-            margin-top : 10px;
-            padding : 2%;
-        }
 
-        #submit-btn{
-            color : white;
-            border : 1px solid white;
-            background-color: #201e1e;
-            text-transform: capitalize;
-            font-size : 1.5vw;
-        }
-    }  
+@import 'components/navbar';
+@import 'components/footer';
 
-}
+@import 'pages/index';
+@import 'pages/about';
+@import 'pages/contact';
+@import 'pages/headshots';
+@import 'pages/press';
+@import 'pages/shows';
+@import 'pages/video';
+@import 'pages/resume';
 
-.headshots-container{
-    display: flex;
-    padding-top : 10vh;
-    // height: 200vh;
-    flex-direction: column;
-    width: 100%;
-    .section-1, .section-2, .section-3{
-        height: 100vh;
-        max-width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        padding : 5%;
-        img{
-            width: auto;
-        }
-    }
-
-    .section-2 img{
-        padding : 1%;
-    }    
-}
-
-.show-content{
-    color : white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    figure{
-        display: flex;
-        padding : 10% 5%;
-        height: 100vh;
-        justify-content: space-around;
-
-        figcaption{
-            text-align: center;
-            margin : auto 0;
-            font-size: 2vw;
-        }
-    }
-}
-
-.vid-container{
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    video{
-        width: 100%;
-
-    }
-}
-
-.article-wrapper{
-    color : white;
-    padding-top : 5%;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    .article-1, .article-2{
-        padding : 5%;
-        width: 100%;
-        font-size: 2vw;
-        figure{
-            display: flex;
-            box-shadow: 10px 5px 10px 5px;
-            border: 1px solid black;
-            img {
-            width: 70%;
-            }
-            figcaption{
-                // margin : 2%;
-                text-align: center;
-                display: flex;
-                flex-direction: column;
-                background-color: #202020;     
-                line-height: 1.5em;    
-                padding : 1%;
-                justify-content: center;
-                align-items: center;       
-                a{
-                    border: 1px solid white;
-                    border-radius: 20px;
-                    margin-top: 10%;
-                }
-            }
-        }
-    }
-
-    .article-2 figure{
-        flex-direction: row-reverse;
-    }
-}
-
-@media only screen and (min-width : 768px ){
-
-    // .main-div{
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     img{
-    //         margin : 0;
-    //         height: 100%;
-    //         width: auto;
-    //     }
-    // }
-    
-    // .first-section{
-    //     padding : 5%;
-    //     justify-content: space-around;
-    //     h2{
-    //         display: flex;
-    //         justify-content: center;
-    //         align-items: center;
-    //     }
-
-    //     .projects-section{
-    //         flex-direction: column;
-    //         justify-content: space-around;
-    //         #left, #right{
-    //             width: 100%;
-    //             figure {
-    //                 flex-direction: row;
-    //                 figcaption{
-    //                     font-size: 2vmin;
-    //                 }
-    //                 img{
-    //                     width: 70%;
-    //                     height: auto;
-    //                 }
-    //             }  
-    //         }
-    //     }
-
-    // }
-
-   }
