--- a/style/components/_navbar.scss
+++ b/style/components/_navbar.scss
@@ -1,4 +1,4 @@
-.navbar{
+header{
     background : linear-gradient(
         to bottom,
         #201e1e,
@@ -14,7 +14,7 @@
     position: absolute;
     z-index: 1;
     font-family: $primary_font;
-    #name{
+    .name{
         width: 50%;
         height: 100%;
         text-transform: uppercase;
@@ -23,7 +23,7 @@
         font-size: 2.5vmax;
     }
 
-    ul{
+    nav{
         display: flex;
         flex-direction: row;
         width: 50%;
@@ -38,13 +38,13 @@
     }
 }
 
-#dropdown_content{
+#dropdown-content{
     display: none;
     position: absolute;
     border-radius: 2em;
 }
 
-#dropdown_content a {
+#dropdown-content a {
     float: none;
     padding : 10% 1vmax 10%;
     text-decoration: none;
@@ -55,11 +55,81 @@
     margin: 2%;
 }
 
-.dropdown:hover #dropdown_content {
+.dropdown:hover #dropdown-content {
     display: block;
 }
 
-.navbar #ig_icon_container img{
+.navbar #ig-icon-container img{
     width: 2vmax;
     height: auto;
+}
+
+@media only screen and (max-width : 768px ){
+    header{
+        background-color: black;
+        height: 10vh;
+        padding: 0%;
+        padding-left: 20%;
+        flex-direction: row;
+        justify-content: space-around;
+        position: absolute;
+        z-index: 1;
+        font-family: $primary_font;
+        .name{
+            width: 60%;
+            justify-content: center;
+        }
+    
+        nav{
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #333333;
+            top: 10vh;
+            width: 100%;
+            div{
+                height: 40px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-bottom: 1px solid black;
+                font-size: 2vmax;
+            }
+        }
+    
+        .icon{
+            display: flex;
+            width: 20%;
+            justify-content: center;
+            align-items: center;
+            font-size: 4vmax;
+        }
+    }
+    
+    #dropdown-content{
+        display: none;
+        position: absolute;
+        border-radius: 2em;
+    }
+    
+    #dropdown-content a {
+        float: none;
+        padding : 10% 1vmax 10%;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+        background-color: #201e1e;
+        border-radius: 2em;
+        margin: 2%;
+    }
+    
+    .dropdown:hover #dropdown-content {
+        display: block;
+    }
+    
+    .navbar #ig-icon-container img{
+        width: 2vmax;
+        height: auto;
+    }
 }
