--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -49,7 +49,6 @@
 
 @media only screen and (max-width : 768px ){
     .footer{
-        // background-color: #333333;
         padding: 10% 5%;
         height : 25vh;
         justify-content: space-evenly;
@@ -57,13 +56,17 @@
             height: 100%;
             flex-direction: column;
     
-            #email{
-                // font-family: $primary_font;
+            #email {
+                font-family: $primary_font;
                 font-size: 1.7vmax;
+            }
+
+            img{
+                height: 100%;
             }
     
         }
-        .footer_navbar{
+        .footer_navbar {
             display: none;
         }
     }
