added full responsive navbar

--- a/style/style.css
+++ b/style/style.css
@@ -263,8 +263,7 @@ header .icon {
 
 @media only screen and (max-width: 768px) {
   .footer {
-    background-color: #333333;
-    padding: 10% 5%;
+    padding: 5%;
     height: 25vh;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
@@ -279,19 +278,15 @@ header .icon {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-  }
-  .footer .footer_header #name {
     background-color: black;
-    border: 1px solid white;
+    padding: 2%;
   }
   .footer .footer_header #email {
     font-family: "Montserrat", sans-serif;
-    font-size: 1.7vmax;
-    background-color: black;
+    font-size: 2vmax;
   }
   .footer .footer_header img {
     height: 100%;
-    background-color: black;
   }
   .footer .footer_navbar {
     display: none;
