--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -49,8 +49,7 @@
 
 @media only screen and (max-width : 768px ){
     .footer{
-        background-color: #333333;
-        padding: 10% 5%;
+        padding: 5%;
         height : 25vh;
         justify-content: space-evenly;
         .footer_header{
@@ -58,20 +57,16 @@
             flex-direction: column;
             justify-content: space-between;
     
-            #name{
-                background-color: black;
-                border : 1px solid white;
-            }
+            background-color: black;
+            padding : 2%;
 
             #email {
                 font-family: $primary_font;
-                font-size: 1.7vmax;
-                background-color: black;
+                font-size: 2vmax;
             }
 
             img{
                 height: 100%;
-                background-color: black;
             }
     
         }
