--- a/style/pages/_headshots.scss
+++ b/style/pages/_headshots.scss
@@ -11,7 +11,9 @@
         justify-content: space-evenly;
         padding : 5%;
         img{
-            width: auto;
+            // width: auto;
+            height: 100%;
+            // width: 100%;
         }
     }
 }
