--- a/style/style.css
+++ b/style/style.css
@@ -743,7 +743,7 @@ header .icon {
 }
 
 .headshots-container .section-1 img, .headshots-container .section-2 img, .headshots-container .section-3 img, .headshots-container .section-4 img {
-  width: auto;
+  height: 100%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -896,6 +896,7 @@ header .icon {
 
 .show-content figure img {
   padding: 5%;
+  height: 100%;
 }
 
 .show-content figure figcaption {
