--- a/style/components/_navbar.scss
+++ b/style/components/_navbar.scss
@@ -64,6 +64,52 @@ header{
     height: auto;
 }
 
+
+.nav-bar-mobile-1, .nav-bar-mobile-2{
+    display: none;
+    background-color: black;
+    position: fixed;
+    top : 0;
+    left : 0;
+    height: 100vh;
+    width: 100%;
+    padding : 10%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 4vmax;
+    color : white;
+    overflow: hidden;
+    overflow-y: hidden;
+}
+
+.back, .close, .gallery-show-more{
+    // background-color: #333333;
+    cursor: pointer;
+    font-size: 6vmax;
+}
+
+.gallery-show-more{
+    font-size: 4vmax;
+    cursor: pointer;
+}
+
+
+.nav-bar-mobile-1 #ig-icon-container{
+    // background-color: lightblue;
+    width: 100%;
+    height: 15%;
+    img{
+        height: 100%;
+        width: auto;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+
+
 @media only screen and (max-width : 768px ){
     header{
         background-color: black;
@@ -82,20 +128,6 @@ header{
     
         nav{
             display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: #333333;
-            top: 10vh;
-            width: 100%;
-            div{
-                height: 40px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-bottom: 1px solid black;
-                font-size: 2vmax;
-            }
         }
     
         .icon{
@@ -107,29 +139,4 @@ header{
         }
     }
     
-    #dropdown-content{
-        display: none;
-        position: absolute;
-        border-radius: 2em;
-    }
-    
-    #dropdown-content a {
-        float: none;
-        padding : 10% 1vmax 10%;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-        background-color: #201e1e;
-        border-radius: 2em;
-        margin: 2%;
-    }
-    
-    .dropdown:hover #dropdown-content {
-        display: block;
-    }
-    
-    .navbar #ig-icon-container img{
-        width: 2vmax;
-        height: auto;
-    }
 }
