--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,57 @@ header .icon {
   height: auto;
 }
 
+.nav-bar-mobile-1, .nav-bar-mobile-2 {
+  display: none;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  padding: 10%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 4vmax;
+  color: white;
+  overflow: hidden;
+  overflow-y: hidden;
+}
+
+.back, .close, .gallery-show-more {
+  cursor: pointer;
+  font-size: 6vmax;
+}
+
+.gallery-show-more {
+  font-size: 4vmax;
+  cursor: pointer;
+}
+
+.nav-bar-mobile-1 #ig-icon-container {
+  width: 100%;
+  height: 15%;
+}
+
+.nav-bar-mobile-1 #ig-icon-container img {
+  height: 100%;
+  width: auto;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media only screen and (max-width: 768px) {
   header {
     background-color: black;
@@ -129,26 +180,6 @@ header .icon {
   }
   header nav {
     display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #333333;
-    top: 10vh;
-    width: 100%;
-  }
-  header nav div {
-    height: 40px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    border-bottom: 1px solid black;
-    font-size: 2vmax;
   }
   header .icon {
     display: -webkit-box;
@@ -162,28 +193,6 @@ header .icon {
         -ms-flex-align: center;
             align-items: center;
     font-size: 4vmax;
-  }
-  #dropdown-content {
-    display: none;
-    position: absolute;
-    border-radius: 2em;
-  }
-  #dropdown-content a {
-    float: none;
-    padding: 10% 1vmax 10%;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    background-color: #201e1e;
-    border-radius: 2em;
-    margin: 2%;
-  }
-  .dropdown:hover #dropdown-content {
-    display: block;
-  }
-  .navbar #ig-icon-container img {
-    width: 2vmax;
-    height: auto;
   }
 }
 
