--- a/style/pages/_about.scss
+++ b/style/pages/_about.scss
@@ -52,18 +52,26 @@
 @media only screen and (max-width : 768px ){
     .about_intro{
         align-items: center;
-        padding : 80% 10%;
+        padding : 50% 10%;
+        #full_bio_btn{
+          font-size: 2vmax;
+        }
     }
 
     .about_full{
         flex-direction: column;
         justify-content: space-around;
         padding : 5%;
+        height: 200vh;
+        // background-color: aliceblue;
         #content{
-            line-height: 2vmax;
-            font-size: 1.2vmax;
+            line-height: 1.5em;
+            font-size: 2vmax;
+            height: 100vh;
+            padding: 2%;
         }
         #about_pic{
+            padding: 5%;
             width: 100%;
             height: 40%;
         }
